--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,12 @@
     <string name="komunikator_dla_biznesu">Komunikator dla biznesu</string>
     <string name="email">Email</string>
     <string name="zaloguj_si">Zaloguj się</string>
-    <string name="has_o">Hasło</string>
     <string name="zaloguj">Zaloguj</string>
     <string name="zarejestruj_si">Zarejestruj się</string>
     <string name="briefcase">briefcase</string>
+    <string name="imi">Imię</string>
+    <string name="nazwisko">Nazwisko</string>
+    <string name="has_o">Hasło</string>
+    <string name="kontynuuj">Kontynuuj</string>
+    <string name="powr_t_do_ekranu_logowania">Powrót do ekranu logowania</string>
 </resources>
