--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,12 @@
     <string name="deadline">Termin:</string>
     <string name="dateExample">01/01/2021</string>
 
+    <!-- ADD GROUP -->
+    <string name="labelTview">Tworzenie grupy zadaniowej</string>
+    <string name="addUsers_group">Dodaj użytkowników</string>
+    <string name="userChooseTestV">Wybierz użytkowników</string>
+
+
     <!-- USER PROFILE -->
     <string name="statusAvailable">Dostępny</string>
     <string name="statusUnavailable">Niedostępny</string>
@@ -83,5 +89,7 @@
     <string name="grupy">Grupy</string>
     <string name="zadania">Zadania</string>
     <string name="chat">Chat</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
