--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,5 +94,9 @@
     <string name="grupy">Grupy</string>
     <string name="zadania">Zadania</string>
     <string name="chat">Chat</string>
+    
+    <!--navigation-->
+    <string name="Open">Open</string>
+    <string name="Close">Close</string>
 
 </resources>
