added group view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,8 @@
     <string name="leaderChooseTestV">Wybierz lidera grupy</string>
     <string name="backToAdd">Wybrano</string>
     <string name="create">Utwórz grupę</string>
+    <string name="seeFellows">Zobacz członków</string>
+    <string name="taskToDo">Twoje zadania do wykonania</string>
 
 
 
