--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,7 +69,7 @@
     <string name="backToAdd">Wybrano</string>
     <string name="create">Utwórz grupę</string>
     <string name="seeFellows">Zobacz członków</string>
-    <string name="taskToDo">Twoje zadania do wykonania</string>
+    <string name="taskToDo">Twoje zadania do wykonania:</string>
 
 
 
